--- a/tribute html.html
+++ b/tribute html.html
@@ -60,7 +60,7 @@
       </div>
 
         <p>We encourage you to find more about Araki and JoJo through his <a id="tribute-link" target="_blank" href="google.com">Wiki Page</a>.
-        <p id="anch">Developed and Written by: <a href="https://github.com/AlphaRay07">Manav Dewangan</a></p>
+        <p id="anch">Developed and Written by: <a href="https://github.com/AlphaRay07">Rawn</a></p>
 
 
     </main>
